deploy: 7037c265fa2452b47678bdfccbd5adc2a0d079a5

--- a/coding/Intro to Python/Dictionaries.html
+++ b/coding/Intro to Python/Dictionaries.html
@@ -71,13 +71,16 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="../intro.html">Coding</a>
+    <a href="../intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
+    </li>
     <li class="active">
-      <a href="intro.html">Intro To Python</a>
+      <a href="intro.html">Introduction to Python programming language</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Dictionaries</a>
@@ -132,22 +135,16 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
