--- a/coding/Intro to Python/While_loops.html
+++ b/coding/Intro to Python/While_loops.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Pandas" href="../Pandas/intro.html" />
+    <link rel="next" title="Extra resources for researchers" href="../../extra_resources_for_researchers/intro.html" />
     <link rel="prev" title="Variables" href="Variables.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,13 +71,16 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="../intro.html">Coding</a>
+    <a href="../intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
+    </li>
     <li class="active">
-      <a href="intro.html">Intro To Python</a>
+      <a href="intro.html">Introduction to Python programming language</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Dictionaries.html">Dictionaries</a>
@@ -132,22 +135,16 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -380,7 +377,7 @@ Final counter is:  11
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Variables.html" title="previous page">Variables</a>
-    <a class='right-next' id="next-link" href="../Pandas/intro.html" title="next page">Pandas</a>
+    <a class='right-next' id="next-link" href="../../extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
