--- a/coding/Intro to Python/intro.html
+++ b/coding/Intro to Python/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Dictionaries" href="Dictionaries.html" />
-    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
+    <link rel="prev" title="Plotting" href="../Pandas/Pandas_6plotting.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,13 +71,16 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="../intro.html">Coding</a>
+    <a href="../intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
     </li>
+    <li class="">
+      <a href="../Pandas/intro.html">Pandas</a>
+    </li>
     <li class="active">
-      <a href="">Intro To Python</a>
+      <a href="">Introduction to Python programming language</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="Dictionaries.html">Dictionaries</a>
@@ -132,22 +135,16 @@
       </li>
     </ul>
     </li>
-    <li class="">
-      <a href="../Pandas/intro.html">Pandas</a>
-    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -310,7 +307,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
+    <a class='left-prev' id="prev-link" href="../Pandas/Pandas_6plotting.html" title="previous page">Plotting</a>
     <a class='right-next' id="next-link" href="Dictionaries.html" title="next page">Dictionaries</a>
 
     </div>
