--- a/extra_resources_for_researchers/Camera_Calibration.html
+++ b/extra_resources_for_researchers/Camera_Calibration.html
@@ -71,10 +71,10 @@
     <a href="../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../coding/intro.html">Coding</a>
+    <a href="../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="active">
-    <a href="intro.html">Extra Resources For Researchers</a>
+    <a href="intro.html">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
     <li class="active">
       <a href="">Camera Calibration</a>
@@ -97,13 +97,10 @@
   </ul>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
-  </li>
-  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../genindex.html">Index</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
