--- a/extra_resources_for_researchers/intro.html
+++ b/extra_resources_for_researchers/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
-    <link rel="prev" title="Plotting" href="../coding/Pandas/Pandas_6plotting.html" />
+    <link rel="prev" title="While loops" href="../coding/Intro to Python/While_loops.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,10 +71,10 @@
     <a href="../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../coding/intro.html">Coding</a>
+    <a href="../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="active">
-    <a href="">Extra Resources For Researchers</a>
+    <a href="">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="Camera_Calibration.html">Camera Calibration</a>
@@ -97,13 +97,10 @@
   </ul>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
-  </li>
-  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../genindex.html">Index</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -211,7 +208,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Pandas/Pandas_6plotting.html" title="previous page">Plotting</a>
+    <a class='left-prev' id="prev-link" href="../coding/Intro to Python/While_loops.html" title="previous page">While loops</a>
     <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
