--- a/intro.html
+++ b/intro.html
@@ -70,19 +70,16 @@
     <a href="#">Landing page</a>
   </li>
   <li class="">
-    <a href="coding/intro.html">Coding</a>
+    <a href="coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="geosciences/intro.html">Geosciences</a>
+    <a href="extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="genindex.html">Index</a>
+    <a href="geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
