--- a/mathematics/complex analysis/complex_functions.html
+++ b/mathematics/complex analysis/complex_functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex plane" href="complex_plane.html" />
-    <link rel="prev" title="Introduction" href="Introduction.html" />
+    <link rel="prev" title="Complex Analysis" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,29 +71,23 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../../coding/intro.html">Coding</a>
+    <a href="../../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
-      </li>
       <li class="active">
         <a href="">Complex functions</a>
       </li>
@@ -101,10 +95,16 @@
         <a href="complex_plane.html">Complex plane</a>
       </li>
       <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
         <a href="integrating.html">Complex integration</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
       </li>
     </ul>
     </li>
@@ -112,27 +112,24 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
     </li>
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -669,7 +666,7 @@ Ln(z) &amp; = Ln(|z|e^{i Arg(z)}) =  \ln(|z|) + \ln(e^{i Arg(z)}) \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Introduction.html" title="previous page">Introduction</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
     <a class='right-next' id="next-link" href="complex_plane.html" title="next page">Complex plane</a>
 
     </div>
