--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Introduction to Python programming language" href="Intro to Python/intro.html" />
+    <link rel="next" title="Pandas" href="Pandas/intro.html" />
     <link rel="prev" title="The Python Programming Language" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,30 +71,27 @@
     <a href="../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="intro.html">Coding</a>
+    <a href="intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="active">
       <a href="">NumPy Arrays</a>
     </li>
     <li class="">
-      <a href="Intro to Python/intro.html">Intro To Python</a>
+      <a href="Pandas/intro.html">Pandas</a>
     </li>
     <li class="">
-      <a href="Pandas/intro.html">Pandas</a>
+      <a href="Intro to Python/intro.html">Introduction to Python programming language</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
+    <a href="../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../genindex.html">Index</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -494,7 +491,7 @@ A[:, ::-1] =
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">The Python Programming Language</a>
-    <a class='right-next' id="next-link" href="Intro to Python/intro.html" title="next page">Introduction to Python programming language</a>
+    <a class='right-next' id="next-link" href="Pandas/intro.html" title="next page">Pandas</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
