--- a/coding/Pandas/Pandas_6plotting.html
+++ b/coding/Pandas/Pandas_6plotting.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Extra resources for researchers" href="../../extra_resources_for_researchers/intro.html" />
+    <link rel="next" title="Introduction to Python programming language" href="../Intro to Python/intro.html" />
     <link rel="prev" title="Creating date-time stamps" href="Pandas_5time_stamps.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,13 +71,10 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="../intro.html">Coding</a>
+    <a href="../intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
-    </li>
-    <li class="">
-      <a href="../Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="active">
       <a href="intro.html">Pandas</a>
@@ -102,19 +99,19 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../Intro to Python/intro.html">Introduction to Python programming language</a>
+    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -400,7 +397,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Pandas_5time_stamps.html" title="previous page">Creating date-time stamps</a>
-    <a class='right-next' id="next-link" href="../../extra_resources_for_researchers/intro.html" title="next page">Extra resources for researchers</a>
+    <a class='right-next' id="next-link" href="../Intro to Python/intro.html" title="next page">Introduction to Python programming language</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
