--- a/coding/Pandas/intro.html
+++ b/coding/Pandas/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Introduction" href="Pandas_1basics.html" />
-    <link rel="prev" title="While loops" href="../Intro to Python/While_loops.html" />
+    <link rel="prev" title="NumPy Arrays" href="../NumPy_Arrays.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,13 +71,10 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="active">
-    <a href="../intro.html">Coding</a>
+    <a href="../intro.html">The Python Programming Language</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="../NumPy_Arrays.html">NumPy Arrays</a>
-    </li>
-    <li class="">
-      <a href="../Intro to Python/intro.html">Intro To Python</a>
     </li>
     <li class="active">
       <a href="">Pandas</a>
@@ -102,19 +99,19 @@
       </li>
     </ul>
     </li>
+    <li class="">
+      <a href="../Intro to Python/intro.html">Introduction to Python programming language</a>
+    </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="">
     <a href="../../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -263,7 +260,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../Intro to Python/While_loops.html" title="previous page">While loops</a>
+    <a class='left-prev' id="prev-link" href="../NumPy_Arrays.html" title="previous page">NumPy Arrays</a>
     <a class='right-next' id="next-link" href="Pandas_1basics.html" title="next page">Introduction</a>
 
     </div>
