--- a/extra_resources_for_researchers/Particle_Image_Velocimetry.html
+++ b/extra_resources_for_researchers/Particle_Image_Velocimetry.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
-    <link rel="next" title="Geosciences" href="../geosciences/intro.html" />
+    <link rel="next" title="Mathematics" href="../mathematics/intro.html" />
     <link rel="prev" title="Google Earth Engine Getting Started" href="Google_Earth_Engine_Getting_Started_.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,10 +71,10 @@
     <a href="../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../coding/intro.html">Coding</a>
+    <a href="../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="active">
-    <a href="intro.html">Extra Resources For Researchers</a>
+    <a href="intro.html">Extra resources for researchers</a>
   <ul class="nav sidenav_l2">
     <li class="">
       <a href="Camera_Calibration.html">Camera Calibration</a>
@@ -97,13 +97,10 @@
   </ul>
   </li>
   <li class="">
-    <a href="../geosciences/intro.html">Geosciences</a>
-  </li>
-  <li class="">
     <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="">
-    <a href="../genindex.html">Index</a>
+    <a href="../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -671,7 +668,7 @@ end of iterative process.. Re-arranging vector fields..
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="Google_Earth_Engine_Getting_Started_.html" title="previous page">Google Earth Engine Getting Started</a>
-    <a class='right-next' id="next-link" href="../geosciences/intro.html" title="next page">Geosciences</a>
+    <a class='right-next' id="next-link" href="../mathematics/intro.html" title="next page">Mathematics</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
