--- a/geosciences/Image_Transformations_and_Orthorectification.html
+++ b/geosciences/Image_Transformations_and_Orthorectification.html
@@ -71,10 +71,13 @@
     <a href="../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../coding/intro.html">Coding</a>
+    <a href="../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
+    <a href="../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
+  </li>
+  <li class="">
+    <a href="../mathematics/intro.html">Mathematics</a>
   </li>
   <li class="active">
     <a href="intro.html">Geosciences</a>
@@ -110,12 +113,6 @@
       <a href="Wave_dispersion.html">Waves</a>
     </li>
   </ul>
-  </li>
-  <li class="">
-    <a href="../mathematics/intro.html">Mathematics</a>
-  </li>
-  <li class="">
-    <a href="../genindex.html">Index</a>
   </li>
 </ul>
 </nav>
