--- a/mathematics/calculus/Vector_calculus.html
+++ b/mathematics/calculus/Vector_calculus.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex Analysis" href="../complex analysis/intro.html" />
+    <link rel="next" title="Series and sequences" href="../series_and_sequences/intro.html" />
     <link rel="prev" title="Calculus" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,17 +71,26 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../../coding/intro.html">Coding</a>
+    <a href="../../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
+    <li class="">
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
+    </li>
+    <li class="">
+      <a href="../complex analysis/intro.html">Complex Analysis</a>
+    </li>
+    <li class="">
+      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+    </li>
     <li class="active">
       <a href="intro.html">Calculus</a>
       <ul class="nav sidenav_l3">
@@ -91,33 +100,21 @@
     </ul>
     </li>
     <li class="">
-      <a href="../complex analysis/intro.html">Complex Analysis</a>
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
     </li>
     <li class="">
-      <a href="../linear_algebra/intro.html">Linear Algebra</a>
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
-    </li>
-    <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
-    </li>
-    <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -999,7 +996,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Calculus</a>
-    <a class='right-next' id="next-link" href="../complex analysis/intro.html" title="next page">Complex Analysis</a>
+    <a class='right-next' id="next-link" href="../series_and_sequences/intro.html" title="next page">Series and sequences</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
