--- a/mathematics/mathematical_notation/Big_O_notation.html
+++ b/mathematics/mathematical_notation/Big_O_notation.html
@@ -71,19 +71,19 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../../coding/intro.html">Coding</a>
+    <a href="../../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,10 +92,13 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../calculus/intro.html">Calculus</a>
+    </li>
+    <li class="">
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
     </li>
     <li class="active">
-      <a href="intro.html">Mathematical Notation</a>
+      <a href="intro.html">Mathematical notation</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Big O notation</a>
@@ -106,21 +109,15 @@
     </ul>
     </li>
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
+      <a href="../sets and functions/intro.html">Sets and functions</a>
     </li>
     <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
-    </li>
-    <li class="">
-      <a href="../sets and functions/intro.html">Sets And Functions</a>
-    </li>
-    <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
