--- a/mathematics/sets and functions/intro.html
+++ b/mathematics/sets and functions/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Composition and Inverse Functions" href="composition_and_inverse.html" />
-    <link rel="prev" title="Taylor series" href="../series_and_sequences/Taylor_series.html" />
+    <link rel="prev" title="Review of tensors" href="../mathematical_notation/Tensors_Review.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -71,19 +71,19 @@
     <a href="../../intro.html">Landing page</a>
   </li>
   <li class="">
-    <a href="../../coding/intro.html">Coding</a>
+    <a href="../../coding/intro.html">The Python Programming Language</a>
   </li>
   <li class="">
-    <a href="../../extra_resources_for_researchers/intro.html">Extra Resources For Researchers</a>
-  </li>
-  <li class="">
-    <a href="../../geosciences/intro.html">Geosciences</a>
+    <a href="../../extra_resources_for_researchers/intro.html">Extra resources for researchers</a>
   </li>
   <li class="active">
     <a href="../intro.html">Mathematics</a>
   <ul class="nav sidenav_l2">
     <li class="">
-      <a href="../calculus/intro.html">Calculus</a>
+      <a href="../numerical_methods/intro.html">Numerical methods</a>
+    </li>
+    <li class="">
+      <a href="../statistics/intro.html">Statistics</a>
     </li>
     <li class="">
       <a href="../complex analysis/intro.html">Complex Analysis</a>
@@ -92,19 +92,16 @@
       <a href="../linear_algebra/intro.html">Linear Algebra</a>
     </li>
     <li class="">
-      <a href="../math_methods_1/intro.html">Math Methods 1</a>
+      <a href="../calculus/intro.html">Calculus</a>
     </li>
     <li class="">
-      <a href="../mathematical_notation/intro.html">Mathematical Notation</a>
+      <a href="../series_and_sequences/intro.html">Series and sequences</a>
     </li>
     <li class="">
-      <a href="../numerical_methods/intro.html">Numerical Methods</a>
-    </li>
-    <li class="">
-      <a href="../series_and_sequences/intro.html">Series And Sequences</a>
+      <a href="../mathematical_notation/intro.html">Mathematical notation</a>
     </li>
     <li class="active">
-      <a href="">Sets And Functions</a>
+      <a href="">Sets and functions</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="composition_and_inverse.html">Composition and Inverse Functions</a>
@@ -127,12 +124,12 @@
     </ul>
     </li>
     <li class="">
-      <a href="../statistics/intro.html">Statistics</a>
+      <a href="../math_methods_1/intro.html">Mathematical Methods 1</a>
     </li>
   </ul>
   </li>
   <li class="">
-    <a href="../../genindex.html">Index</a>
+    <a href="../../geosciences/intro.html">Geosciences</a>
   </li>
 </ul>
 </nav>
@@ -273,7 +270,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../series_and_sequences/Taylor_series.html" title="previous page">Taylor series</a>
+    <a class='left-prev' id="prev-link" href="../mathematical_notation/Tensors_Review.html" title="previous page">Review of tensors</a>
     <a class='right-next' id="next-link" href="composition_and_inverse.html" title="next page">Composition and Inverse Functions</a>
 
     </div>
