deploy: 964870110384f5e785f9b8d9635b463a1dfd8fd2

--- a/mathematics/complex analysis/complex_functions.html
+++ b/mathematics/complex analysis/complex_functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex plane" href="complex_plane.html" />
-    <link rel="prev" title="Complex Analysis" href="intro.html" />
+    <link rel="prev" title="Introduction" href="Introduction.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -88,6 +88,12 @@
     <li class="active">
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
+      <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
+      </li>
       <li class="active">
         <a href="">Complex functions</a>
       </li>
@@ -95,16 +101,10 @@
         <a href="complex_plane.html">Complex plane</a>
       </li>
       <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
-      <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
         <a href="integrating.html">Complex integration</a>
-      </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
       </li>
     </ul>
     </li>
@@ -666,7 +666,7 @@ Ln(z) &amp; = Ln(|z|e^{i Arg(z)}) =  \ln(|z|) + \ln(e^{i Arg(z)}) \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Complex Analysis</a>
+    <a class='left-prev' id="prev-link" href="Introduction.html" title="previous page">Introduction</a>
     <a class='right-next' id="next-link" href="complex_plane.html" title="next page">Complex plane</a>
 
     </div>
