--- a/mathematics/complex analysis/holomorphic_functions.html
+++ b/mathematics/complex analysis/holomorphic_functions.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Complex integration" href="integrating.html" />
-    <link rel="prev" title="Fractals" href="Fractals.html" />
+    <link rel="prev" title="Complex plane" href="complex_plane.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -89,22 +89,22 @@
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
+      </li>
+      <li class="">
         <a href="complex_functions.html">Complex functions</a>
       </li>
       <li class="">
         <a href="complex_plane.html">Complex plane</a>
-      </li>
-      <li class="">
-        <a href="Fractals.html">Fractals</a>
       </li>
       <li class="active">
         <a href="">Holomorphic functions</a>
       </li>
       <li class="">
         <a href="integrating.html">Complex integration</a>
-      </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
       </li>
     </ul>
     </li>
@@ -370,7 +370,7 @@ f'(z_0) &amp; = \partial_x u + i \partial_x v =: \partial_x f(z_0) \\
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
+    <a class='left-prev' id="prev-link" href="complex_plane.html" title="previous page">Complex plane</a>
     <a class='right-next' id="next-link" href="integrating.html" title="next page">Complex integration</a>
 
     </div>
