--- a/extra_resources_for_researchers/intro.html
+++ b/extra_resources_for_researchers/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Camera Calibration" href="Camera_Calibration.html" />
-    <link rel="prev" title="While loops" href="../coding/Intro to Python/While_loops.html" />
+    <link rel="prev" title="Plotting data with Matplotlib" href="../coding/Intro to Python/17_Matplotlib.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -208,7 +208,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../coding/Intro to Python/While_loops.html" title="previous page">While loops</a>
+    <a class='left-prev' id="prev-link" href="../coding/Intro to Python/17_Matplotlib.html" title="previous page">Plotting data with Matplotlib</a>
     <a class='right-next' id="next-link" href="Camera_Calibration.html" title="next page">Camera Calibration</a>
 
     </div>
