--- a/genindex.html
+++ b/genindex.html
@@ -201,7 +201,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-2">Bijection</a>
 </li>
-      <li><a href="coding/Intro to Python/Flow_control_statements.html#index-0">Break and continue statements</a>
+      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-0">Break and continue statements</a>
 </li>
   </ul></td>
 </tr></table>
@@ -231,7 +231,7 @@
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-3">Composition (functions)</a>
 </li>
-      <li><a href="coding/Intro to Python/Functions.html#index-0">Creating functions</a>
+      <li><a href="coding/Intro to Python/11_Functions.html#index-0">Creating functions</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-10">Curl of a vector field</a>
 </li>
@@ -243,7 +243,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-2">De Moivre&#39;s formula</a>
 </li>
-      <li><a href="coding/Intro to Python/Dictionaries.html#index-0">Dictionaries</a>
+      <li><a href="coding/Intro to Python/14_Dictionaries.html#index-0">Dictionaries</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -271,11 +271,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/sets and functions/sets.html#index-3">Field (mathematics)</a>
 </li>
-      <li><a href="coding/Intro to Python/File_handling.html#index-0">File handling</a>
+      <li><a href="coding/Intro to Python/13_File_handling.html#index-0">File handling</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-1">Formatted printing</a>
+      <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-1">Formatted printing</a>
 </li>
       <li><a href="mathematics/complex analysis/Fractals.html#index-0">Fractals</a>
 </li>
@@ -301,7 +301,7 @@
 <h2 id="H">H</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/Handling_errors.html#index-0">Handling errors</a>
+      <li><a href="coding/Intro to Python/9_Handling_errors.html#index-0">Handling errors</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -315,11 +315,11 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/If_statement.html#index-0">If statement</a>
+      <li><a href="coding/Intro to Python/3_If_statement.html#index-0">If statement</a>
 </li>
       <li><a href="mathematics/sets and functions/functions.html#index-4">Image (functions)</a>
 </li>
-      <li><a href="coding/Intro to Python/Importing.html#index-0">Importing modules</a>
+      <li><a href="coding/Intro to Python/10_Importing.html#index-0">Importing modules</a>
 </li>
       <li><a href="mathematics/sets and functions/composition_and_inverse.html#index-0">Injection</a>
 </li>
@@ -347,19 +347,19 @@
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-5">Linear transformation</a>
 </li>
-      <li><a href="coding/Intro to Python/Lists.html#index-0">Lists</a>
+      <li><a href="coding/Intro to Python/5_Lists.html#index-0">Lists</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/List_comprehensions.html#index-0">Lists: list comprehensions</a>
+      <li><a href="coding/Intro to Python/7_List_comprehensions.html#index-0">Lists: list comprehensions</a>
 </li>
-      <li><a href="coding/Intro to Python/Nested_lists.html#index-0">Lists: nested lists</a>
+      <li><a href="coding/Intro to Python/8_Nested_lists.html#index-0">Lists: nested lists</a>
 </li>
       <li><a href="mathematics/sets and functions/logic.html#index-0">Logic symbols</a>
 </li>
-      <li><a href="coding/Intro to Python/For_loops.html#index-0">Loops: for loop</a>
+      <li><a href="coding/Intro to Python/6_For_loops.html#index-0">Loops: for loop</a>
 </li>
-      <li><a href="coding/Intro to Python/While_loops.html#index-0">Loops: while loops</a>
+      <li><a href="coding/Intro to Python/4_While_loops.html#index-0">Loops: while loops</a>
 </li>
   </ul></td>
 </tr></table>
@@ -367,7 +367,7 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-0">Matplotlib plotting</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-0">Matplotlib plotting</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-1">Matrix-matrix multiplication</a>
 </li>
@@ -397,51 +397,51 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-2">Pandas: assigning</a>
+      <li><a href="coding/Pandas/2_filter_select_assign.html#index-2">Pandas: assigning</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_1basics.html#index-0">Pandas: basics</a>
+      <li><a href="coding/Pandas/1_basics.html#index-0">Pandas: basics</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-1">Pandas: combining</a>
+      <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-1">Pandas: combining</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_5time_stamps.html#index-0">Pandas: date-time stamps</a>
+      <li><a href="coding/Pandas/5_time_stamps.html#index-0">Pandas: date-time stamps</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-0">Pandas: filtering</a>
+      <li><a href="coding/Pandas/2_filter_select_assign.html#index-0">Pandas: filtering</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-2">Pandas: grouping</a>
+      <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-2">Pandas: grouping</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-0">Pandas: merging</a>
+      <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-0">Pandas: merging</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_6plotting.html#index-0">Pandas: plotting</a>
+      <li><a href="coding/Pandas/6_plotting.html#index-0">Pandas: plotting</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_1basics.html#index-1">Pandas: reading and writing files</a>
+      <li><a href="coding/Pandas/1_basics.html#index-1">Pandas: reading and writing files</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_2filter_select_assign.html#index-1">Pandas: selecting</a>
+      <li><a href="coding/Pandas/2_filter_select_assign.html#index-1">Pandas: selecting</a>
 </li>
-      <li><a href="coding/Pandas/Pandas_3merge_combine_group_sort.html#index-3">Pandas: sorting</a>
+      <li><a href="coding/Pandas/3_merge_combine_group_sort.html#index-3">Pandas: sorting</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Pandas/Pandas_4summary_statistics.html#index-0">Pandas: summary stats</a>
+      <li><a href="coding/Pandas/4_summary_statistics.html#index-0">Pandas: summary stats</a>
 </li>
-      <li><a href="coding/Intro to Python/Flow_control_statements.html#index-1">Pass statement</a>
+      <li><a href="coding/Intro to Python/15_Flow_control_statements.html#index-1">Pass statement</a>
 </li>
       <li><a href="mathematics/linear_algebra/Basic_definitions_and_operations.html#index-2">Permutations</a>
 </li>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-5">Plots: 3D</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-5">Plots: 3D</a>
 </li>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-3">Plots: histogram</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-3">Plots: histogram</a>
 </li>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-4">Plots: image</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-4">Plots: image</a>
 </li>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-1">Plots: line</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-1">Plots: line</a>
 </li>
-      <li><a href="coding/Intro to Python/Matplotlib.html#index-2">Plots: scatter</a>
+      <li><a href="coding/Intro to Python/17_Matplotlib.html#index-2">Plots: scatter</a>
 </li>
       <li><a href="mathematics/complex analysis/complex_plane.html#index-1">Polar form of complex numbers</a>
 </li>
       <li><a href="geosciences/Milankovitch_cycles.html#index-3">Precession</a>
 </li>
-      <li><a href="coding/Intro to Python/Printing_and_formatting_statements.html#index-0">Python basics</a>
+      <li><a href="coding/Intro to Python/1_Printing_and_formatting_statements.html#index-0">Python basics</a>
 </li>
   </ul></td>
 </tr></table>
@@ -467,7 +467,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-3">Scalar and vector fields</a>
 </li>
-      <li><a href="coding/Intro to Python/Sets.html#index-0">Sets</a>
+      <li><a href="coding/Intro to Python/16_Sets.html#index-0">Sets</a>
 
       <ul>
         <li><a href="mathematics/sets and functions/sets.html#index-0">(mathematics)</a>
@@ -507,7 +507,7 @@
 </li>
       <li><a href="mathematics/sets and functions/elementary_functions_1.html#index-2">Trigonometric functions</a>
 </li>
-      <li><a href="coding/Intro to Python/Tuples.html#index-0">Tuples</a>
+      <li><a href="coding/Intro to Python/12_Tuples.html#index-0">Tuples</a>
 </li>
   </ul></td>
 </tr></table>
@@ -515,7 +515,7 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="coding/Intro to Python/Variables.html#index-0">Variables</a>
+      <li><a href="coding/Intro to Python/2_Variables.html#index-0">Variables</a>
 </li>
       <li><a href="mathematics/calculus/Vector_calculus.html#index-0">Vector calculus</a>
 </li>
