--- a/mathematics/complex analysis/Introduction.html
+++ b/mathematics/complex analysis/Introduction.html
@@ -31,8 +31,8 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Linear Algebra" href="../linear_algebra/intro.html" />
-    <link rel="prev" title="Complex integration" href="integrating.html" />
+    <link rel="next" title="Complex functions" href="complex_functions.html" />
+    <link rel="prev" title="Fractals" href="Fractals.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -89,22 +89,22 @@
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="active">
+        <a href="">Introduction</a>
+      </li>
+      <li class="">
         <a href="complex_functions.html">Complex functions</a>
       </li>
       <li class="">
         <a href="complex_plane.html">Complex plane</a>
       </li>
       <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
-      <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
         <a href="integrating.html">Complex integration</a>
-      </li>
-      <li class="active">
-        <a href="">Introduction</a>
       </li>
     </ul>
     </li>
@@ -372,8 +372,8 @@ z^n = r^n ( cos n \varphi + i \sin n \varphi) \end{split}\]</div>
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="integrating.html" title="previous page">Complex integration</a>
-    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear Algebra</a>
+    <a class='left-prev' id="prev-link" href="Fractals.html" title="previous page">Fractals</a>
+    <a class='right-next' id="next-link" href="complex_functions.html" title="next page">Complex functions</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
