--- a/mathematics/complex analysis/integrating.html
+++ b/mathematics/complex analysis/integrating.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Introduction" href="Introduction.html" />
+    <link rel="next" title="Linear Algebra" href="../linear_algebra/intro.html" />
     <link rel="prev" title="Holomorphic functions" href="holomorphic_functions.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,22 +89,22 @@
       <a href="intro.html">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
+      </li>
+      <li class="">
         <a href="complex_functions.html">Complex functions</a>
       </li>
       <li class="">
         <a href="complex_plane.html">Complex plane</a>
       </li>
       <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
-      <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="active">
         <a href="">Complex integration</a>
-      </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
       </li>
     </ul>
     </li>
@@ -438,7 +438,7 @@ f( \gamma_2 (t) ) = \frac{1}{e^{it}}, \quad \gamma_2 ' (t) = i e^{it} \\
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="holomorphic_functions.html" title="previous page">Holomorphic functions</a>
-    <a class='right-next' id="next-link" href="Introduction.html" title="next page">Introduction</a>
+    <a class='right-next' id="next-link" href="../linear_algebra/intro.html" title="next page">Linear Algebra</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
