--- a/mathematics/complex analysis/intro.html
+++ b/mathematics/complex analysis/intro.html
@@ -31,7 +31,7 @@
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Complex functions" href="complex_functions.html" />
+    <link rel="next" title="Fractals" href="Fractals.html" />
     <link rel="prev" title="Introduction to statistics for Geoscientists" href="../statistics/Statistics_for_Geoscientists.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,22 +89,22 @@
       <a href="">Complex Analysis</a>
       <ul class="nav sidenav_l3">
       <li class="">
+        <a href="Fractals.html">Fractals</a>
+      </li>
+      <li class="">
+        <a href="Introduction.html">Introduction</a>
+      </li>
+      <li class="">
         <a href="complex_functions.html">Complex functions</a>
       </li>
       <li class="">
         <a href="complex_plane.html">Complex plane</a>
       </li>
       <li class="">
-        <a href="Fractals.html">Fractals</a>
-      </li>
-      <li class="">
         <a href="holomorphic_functions.html">Holomorphic functions</a>
       </li>
       <li class="">
         <a href="integrating.html">Complex integration</a>
-      </li>
-      <li class="">
-        <a href="Introduction.html">Introduction</a>
       </li>
     </ul>
     </li>
@@ -304,7 +304,7 @@
     <div class='prev-next-bottom'>
         
     <a class='left-prev' id="prev-link" href="../statistics/Statistics_for_Geoscientists.html" title="previous page">Introduction to statistics for Geoscientists</a>
-    <a class='right-next' id="next-link" href="complex_functions.html" title="next page">Complex functions</a>
+    <a class='right-next' id="next-link" href="Fractals.html" title="next page">Fractals</a>
 
     </div>
     <footer class="footer mt-5 mt-md-0">
