--- a/mathematics/linear_algebra/intro.html
+++ b/mathematics/linear_algebra/intro.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Basic definitions and operations" href="Basic_definitions_and_operations.html" />
-    <link rel="prev" title="Introduction" href="../complex analysis/Introduction.html" />
+    <link rel="prev" title="Complex integration" href="../complex analysis/integrating.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -249,7 +249,7 @@
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="../complex analysis/Introduction.html" title="previous page">Introduction</a>
+    <a class='left-prev' id="prev-link" href="../complex analysis/integrating.html" title="previous page">Complex integration</a>
     <a class='right-next' id="next-link" href="Basic_definitions_and_operations.html" title="next page">Basic definitions and operations</a>
 
     </div>
