--- a/coding/Intro to Python/1_Printing_and_formatting_statements.html
+++ b/coding/Intro to Python/1_Printing_and_formatting_statements.html
@@ -32,7 +32,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="Variables" href="2_Variables.html" />
-    <link rel="prev" title="Introduction to Python programming language" href="intro.html" />
+    <link rel="prev" title="Intro to Python" href="intro.html" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="docsearch:language" content="en">
@@ -80,7 +80,7 @@
       <a href="../Pandas/intro.html">Pandas</a>
     </li>
     <li class="active">
-      <a href="intro.html">Introduction to Python programming language</a>
+      <a href="intro.html">Intro to Python</a>
       <ul class="nav sidenav_l3">
       <li class="active">
         <a href="">Printing and formatting statements</a>
@@ -580,7 +580,7 @@ _'    `\   _/=== \___/
     
     <div class='prev-next-bottom'>
         
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Introduction to Python programming language</a>
+    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">Intro to Python</a>
     <a class='right-next' id="next-link" href="2_Variables.html" title="next page">Variables</a>
 
     </div>
