--- a/coding/NumPy_Arrays.html
+++ b/coding/NumPy_Arrays.html
@@ -80,7 +80,7 @@
       <a href="Pandas/intro.html">Pandas</a>
     </li>
     <li class="">
-      <a href="Intro to Python/intro.html">Introduction to Python programming language</a>
+      <a href="Intro to Python/intro.html">Intro to Python</a>
     </li>
   </ul>
   </li>
