--- a/coding/Intro to Python/13_File_handling.html
+++ b/coding/Intro to Python/13_File_handling.html
@@ -80,7 +80,7 @@
       <a href="../Pandas/intro.html">Pandas</a>
     </li>
     <li class="active">
-      <a href="intro.html">Introduction to Python programming language</a>
+      <a href="intro.html">Intro to Python</a>
       <ul class="nav sidenav_l3">
       <li class="">
         <a href="1_Printing_and_formatting_statements.html">Printing and formatting statements</a>
