--- a/coding/Pandas/2_filter_select_assign.html
+++ b/coding/Pandas/2_filter_select_assign.html
@@ -100,7 +100,7 @@
     </ul>
     </li>
     <li class="">
-      <a href="../Intro to Python/intro.html">Introduction to Python programming language</a>
+      <a href="../Intro to Python/intro.html">Intro to Python</a>
     </li>
   </ul>
   </li>
